--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.7.0"
   },
